--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -314,6 +314,11 @@ blockquote {
     justify-content: space-between;
     align-items: end;
   }
+  .wp-block-quote{
+    &.is-style-large{
+      padding: 16px;
+    }
+  }
 }
 .wp-block-quote, blockquote {
   // border-left: solid 5px $primary-color;
